[package]
name = "test_memuse"
version = "0.1.0"
authors = ["Yizhi Zhao <yizhi.zhao@yale.edu>"]
build = "../../build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"

[dependencies.terminal_print]
path = "../../kernel/terminal_print"

[dependencies.memuse]
path = "../memuse"
